--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>This is Muhilan's Github Page.</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+  </head>
+  <body>
+    <h1>This is Muhilan's Github Page.</h1>
+    <h2>ITIS 3135 Page</h2>
+  </body>
