--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>ITIS 3135|Muhilan's|Magnificent MEercat|Home</h1>
+    <h1>ITIS 3135|Muhilan's|Magnificent Meercat|Home</h1>
     
     <a href="itis3135/">Click here to go to ITIS 3135</a>
   </body>
