--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Muhilan Muruganandam</title>
   </head>
   <body>
     <h1>ITIS 3135|Muhilan's|Magnificent Meercat|Home</h1>
