--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -21,16 +21,24 @@
       <h2>Muhilan Muruganandam|Magnificent Meercat</h2>
       <figure>
         <img src="images/WhatsApp Image 2025-08-19 at 2.44.07 PM.jpeg" alt="Muhilan_Muruganandam"/>
-        <figcaption>Muhilan Muruganandam</figcaption>
+        <figcaption><i>Muhilan Muruganandam</i></figcaption>
       </figure>
       <ul>
-        <li><b>Personal Background</b></li>
+        <li><b>Personal Background: </b>Born in Texas, became interested in computer science after joining a coding club in middle school.</li>
         <li>Professional Background<b></b></li>
-        <li><b>Academic Background</b></li>
+        <li><b>Academic Background: </b>Junior at UNCC majoring in Computer Science with a concentration in Software Engineering.
+</li>
         <li><b>Background in this subject</b></li>
-        <li><b>Primary Computer Platform</b></li>
-        <li><b>Courses I am Taking & Why</b></li>
-        <li><b></b></li>
+        <li><b>Primary Computer Platform: </b> Windows Thinkpad.</li>
+        <li><b>Courses I am Taking & Why:</b></li>
+        <ul>
+          <li><b>ITCS 3112-001 </b>Design and Implementation of Object Oriented Systems: Concentration Elective</li>
+          <li><b>ITIS 3135-053 </b>Front End Development: Major Requirement</li>
+          <li><b>STAT 2122-005 </b>Intro to Probability and Statistics: Major Requirement</li>
+          <li><b>ITCS 2181-004 </b>Intro to Computer Systems: Major Requirement</li>
+          <li><b>ITIS 3130-001 </b>Intro to Human Centered Computing: Concentration Elective
+</li>
+        </ul>
         <li><b>Graduating in 2027</b></li>
         <li><b>From Texas</b></li>
         
