--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -25,10 +25,10 @@
       </figure>
       <ul>
         <li><b>Personal Background: </b>Born in Texas, became interested in computer science after joining a coding club in middle school.</li>
-        <li>Professional Background<b></b></li>
+        <li>Professional Background: <b>n/a</b></li>
         <li><b>Academic Background: </b>Junior at UNCC majoring in Computer Science with a concentration in Software Engineering.
 </li>
-        <li><b>Background in this subject</b></li>
+        <li><b>Background in this subject:</b>n/a</li>
         <li><b>Primary Computer Platform: </b> Windows Thinkpad.</li>
         <li><b>Courses I am Taking & Why:</b></li>
         <ul>
