--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Muhilan Muruganandam</title>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>ITIS 3135|Muhilan's|Magnificent Meercat|Home</h1>
