--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -27,8 +27,7 @@
       <ul>
         <li><b>Personal Background: </b>Born in Texas, became interested in computer science after joining a coding club in middle school.</li>
         <li>Professional Background: <b>n/a</b></li>
-        <li><b>Academic Background: </b>Junior at UNCC majoring in Computer Science with a concentration in Software Engineering.
-</li>
+        <li><b>Academic Background: </b>Junior at UNCC majoring in Computer Science with a concentration in Software Engineering. </li>
         <li><b>Background in this subject: </b>n/a</li>
         <li><b>Primary Computer Platform: </b> Windows Thinkpad.</li>
         <li><b>Courses I am Taking & Why:</b></li>
@@ -37,8 +36,7 @@
           <li><b>ITIS 3135-053 </b>Front End Development: Major Requirement</li>
           <li><b>STAT 2122-005 </b>Intro to Probability and Statistics: Major Requirement</li>
           <li><b>ITCS 2181-004 </b>Intro to Computer Systems: Major Requirement</li>
-          <li><b>ITIS 3130-001 </b>Intro to Human Centered Computing: Concentration Elective
-</li>
+          <li><b>ITIS 3130-001 </b>Intro to Human Centered Computing: Concentration Elective</li>
         </ul>
         <li><b>Graduating in 2027</b></li>
         <li><b>From Texas</b></li>
