style changes to index.html

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -5,6 +5,26 @@
     <title>Muhilan Muruganandam|Magnificent Meercat|ITIS3135|Home</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <style>
+        body{
+            background-color: rgb(173, 247, 190);
+        }
+        a{
+            color:rgb(22, 4, 139)
+        }
+        a:hover{
+    color:rgb(191, 26, 26);
+        }
+        h1{
+            font-style:oblique;
+        }
+        h2{
+            font-style:oblique;
+        }
+        p{
+            font-style: initial;
+        } 
+    </style>
   </head>
   <body>
     <header>
