--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -21,7 +21,7 @@
       <h2>Introduction</h2>
       <h2>Muhilan Muruganandam|Magnificent Meercat</h2>
       <figure>
-        <img src="images/WhatsApp Image 2025-08-19 at 2.44.07 PM.jpeg" alt="Muhilan_Muruganandam"/>
+        <img src="images/muhilan_photo.jpeg" alt="Muhilan_Muruganandam"/>
         <figcaption><i>Muhilan Muruganandam</i></figcaption>
       </figure>
       <ul>
