home page update

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -45,11 +45,11 @@
       <nav>
         <a href="https://webpages.charlotte.edu/mmuruga2/">Charlotte.edu</a>
         |
-        <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">Github</a>
+        <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">Github.com</a>
         |
         <a href="https://muhilmu-ctrl.github.io/">Github.io</a>
         |
-        <a href="https://muhilmu-ctrl.github.io/itis3135/">itis3135.io</a>
+        <a href="https://muhilmu-ctrl.github.io/itis3135/">ITIS3135</a>
         |
         <a href="https://www.freecodecamp.org/muhilmu">FreeCodeCamp</a>
         |
