--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Muhilan Muruganandam</title>
+    <title>Muhilan Muruganandam | Home</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <style>
+        body{
+            background-color: rgb(253, 228, 228);
+        }
+        a{
+            color:rgb(22, 4, 139)
+        }
+        a:hover{
+    color:rgb(191, 26, 26);
+        }
+        h1{
+            font-style:oblique;
+        }
+        h2{
+            font-style:oblique;
+        }
+        p{
+            font-style: initial;
+        }
+    </style>
   </head>
   <body>
-    <h1>ITIS 3135|Muhilan's|Magnificent Meercat|Home</h1>
+    <h1>Muhilan Muruganandam</h1>
   </body>
+  <footer>
+      <nav>
+        <a href="https://muhilmu-ctrl.github.io/itis3135/">ITIS3135</a>
+        |
+        <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">GitHub.com</a>
+        |
+        <a href="https://webpages.charlotte.edu/mmuruga2/">CLT Web</a>
+        |
+        <a href="https://muhilmu-ctrl.github.io/">GitHub.io</a>
+        |
+        <a href="https://www.linkedin.com/in/muhilan-muruganandam-77b049380/">LinkedIn</a>
+      </nav>
+    </footer>
+    <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
+      <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
+    </a>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
+      <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+    </a>
