--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Muhilan Muruganandam | Home</title>
-    <a href="itis3135/">Click to go to ITIS3135 Site</a>
+    
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
         body{
@@ -27,24 +27,27 @@
     </style>
   </head>
   <body>
+    <a href="itis3135/">Click to go to ITIS3135 Site</a>
     <h1>Muhilan Muruganandam</h1>
-  </body>
-  <footer>
-      <nav>
-        <a href="https://muhilmu-ctrl.github.io/itis3135/">ITIS3135</a>
-        |
-        <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">GitHub.com</a>
-        |
-        <a href="https://webpages.charlotte.edu/mmuruga2/">CLT Web</a>
-        |
-        <a href="https://muhilmu-ctrl.github.io/">GitHub.io</a>
-        |
-        <a href="https://www.linkedin.com/in/muhilan-muruganandam-77b049380/">LinkedIn</a>
-      </nav>
+    <footer>
+        <nav>
+          <a href="https://muhilmu-ctrl.github.io/itis3135/">ITIS3135</a>
+          |
+          <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">GitHub.com</a>
+          |
+          <a href="https://webpages.charlotte.edu/mmuruga2/">CLT Web</a>
+          |
+          <a href="https://muhilmu-ctrl.github.io/">GitHub.io</a>
+          |
+          <a href="https://www.linkedin.com/in/muhilan-muruganandam-77b049380/">LinkedIn</a>
+        </nav>
     </footer>
+
     <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
       <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
     </a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
       <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
     </a>
+    </body>  
+  </html>
