--- a/itis3135/muruganandamsoftware.com/index.html
+++ b/itis3135/muruganandamsoftware.com/index.html
@@ -30,27 +30,43 @@
             font-style: initial;
             color:#302e60;
         }
+        img{
+            width:150px;
+            height:150px;
+            display:block;
+            margin:0 auto;
+        }
+        header{
+            display:flex;
+        }
+        ul{
+            list-style-type: square;
+        }
     </style>
   </head>
   <body>
     <!-- <a href="itis3135/">Click to go to ITIS3135 Site</a> -->
     <header>
         <h1>Muruganandam Software</h1>
-        <!-- <img src="" alt="">    firm's logo goes here -->
+        <img src="images/laptop-image.webp" alt="firm's logo">
     </header>
     <main>
         <h2>Muruganandam's Software Services</h2>
-        <p></p> <!-- made-up description/paragraph of firm-->
+        <p>Muruganandam Software is a creative web design and development firm that helps people bring their ideas online. </p>
+        <br>
         <ul>
-            <li>Custom-tailoring websites built with accessability in mind.</li>
+            <li>Custom-tailoring websites built with accessibility in mind.</li>
             <li>Creative problem solving for special client needs.</li>
+            <li>Affordable solutions for startups and students.</li>
+            <li>Mobile-friendly from the start.</li>
+            <li>Provide support and maintenance to keep your site running smoothly.</li>
         </ul>
         <br>
-        <p></p> <!-- paragraph outlining what you'd do for a client -->
+        <p>At Muruganandam Software, we help turn your ideas into great websites. Let's make your ideas come to life!</p>
         <address>
             <p>Contact:</p>
-            <a href="muruganandamsoftware@gmail.com">muruganandamsoftware@gmail.com</a>
-            <br>123-456-7890
+            <a href="mailto:muruganandamsoftware@gmail.com">muruganandamsoftware@gmail.com</a>
+            <br>(123) 456-7890
         </address>
     </main>
     <footer>
