updates for home index, course index, and design firm index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body{
             background-color: rgb(253, 228, 228);
+            text-align: center;
         }
         a{
             color:rgb(22, 4, 139)
@@ -16,33 +17,35 @@
     color:rgb(191, 26, 26);
         }
         h1{
-            font-style:oblique;
-        }
-        h2{
-            font-style:oblique;
+            font-family:Georgia;
+            text-align: center;
         }
         p{
-            font-style: initial;
+            font-family: Tahoma;
         }
     </style>
   </head>
   <body>
-    <a href="itis3135/">Click to go to ITIS3135 Site</a>
+    <!-- <a href="itis3135/">Click to go to ITIS3135 Site</a> -->
     <h1>Muhilan Muruganandam</h1>
+    <br>
     <footer>
         <nav>
           <a href="https://muhilmu-ctrl.github.io/itis3135/">ITIS3135</a>
           |
           <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">GitHub.com</a>
           |
-          <a href="https://webpages.charlotte.edu/mmuruga2/">CLT Web</a>
-          |
+          <!-- <a href="https://webpages.charlotte.edu/mmuruga2/">CLT Web</a>
+          | -->
           <a href="https://muhilmu-ctrl.github.io/">GitHub.io</a>
           |
           <a href="https://www.linkedin.com/in/muhilan-muruganandam-77b049380/">LinkedIn</a>
         </nav>
     </footer>
-
+    <br>
+    <br>
+    <br>
+    <br>
     <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
       <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
     </a>
