--- a/itis3135/muruganandamsoftware.com/index.html
+++ b/itis3135/muruganandamsoftware.com/index.html
@@ -8,27 +8,36 @@
     <style>
         body{
             background-color: #e8db8c;
+            /* background-color: #302e60; */
         }
         main{
             color:#302e60;
+            /* text-align: center; */
+            /* color:#e8db8c */
         }
         a{
             color:#302e60;
             text-decoration: none;
+            /* color:#e8db8c; */
         }
         a:hover{
     color:rgb(197, 24, 24);
         }
         h1{
-            font-style:oblique;
+            font-family:Georgia;
             color:#302e60;
+            /* color:#e8db8c; */
+            text-align: center;
         }
         h2{
-            font-style:oblique;
+            font-family:Verdana;
+            color:#302e60;
+            
         }
         p{
-            font-style: initial;
+            font-family: Tahoma;
             color:#302e60;
+            /* color:#e8db8c; */
         }
         img{
             width:150px;
@@ -37,22 +46,28 @@
             margin:0 auto;
         }
         header{
-            display:flex;
+            text-align: center;
         }
         ul{
             list-style-type: square;
+            font-family: Tahoma;
         }
+        address{
+            text-align: center;
+            font-family:Tahoma;
+        }
+
     </style>
   </head>
   <body>
     <!-- <a href="itis3135/">Click to go to ITIS3135 Site</a> -->
     <header>
         <h1>Muruganandam Software</h1>
-        <img src="images/laptop-image.webp" alt="firm's logo">
+        <img src="images/transparent-laptop2.png" alt="firm's logo">
     </header>
     <main>
-        <h2>Muruganandam's Software Services</h2>
-        <p>Muruganandam Software is a creative web design and development firm that helps people bring their ideas online. </p>
+        <h2><span>Muruganandam's Software Services</span></h2>
+        <p><span>Muruganandam Software is a creative web design and development firm that helps people bring their ideas online. </span></p>
         <br>
         <ul>
             <li>Custom-tailoring websites built with accessibility in mind.</li>
@@ -63,20 +78,16 @@
         </ul>
         <br>
         <p>At Muruganandam Software, we help turn your ideas into great websites. Let's make your ideas come to life!</p>
+        <hr>
         <address>
             <p>Contact:</p>
             <a href="mailto:muruganandamsoftware@gmail.com">muruganandamsoftware@gmail.com</a>
             <br>(123) 456-7890
         </address>
+        <hr>
     </main>
     <footer>
         <p><a href="https://muruganandamsoftware.com">Muruganandam Software</a> &copy; 2025</p>
     </footer>
-     <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-      <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-    </a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-      <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-    </a>
     </body>  
   </html>
