updated design firm bullet points

--- a/itis3135/muruganandamsoftware.com/index.html
+++ b/itis3135/muruganandamsoftware.com/index.html
@@ -32,12 +32,13 @@
         h2{
             font-family:Verdana;
             color:#302e60;
-            
+            text-align: center;
         }
         p{
             font-family: Tahoma;
             color:#302e60;
             /* color:#e8db8c; */
+            text-align: center;
         }
         img{
             width:150px;
@@ -51,10 +52,17 @@
         ul{
             list-style-type: square;
             font-family: Tahoma;
+            display:table;
+            margin:0 auto;
+            text-align: left;
         }
         address{
             text-align: center;
             font-family:Tahoma;
+        }
+        hr{
+            background-color:#302e60;
+            height:2px;
         }
 
     </style>
@@ -66,7 +74,7 @@
         <img src="images/transparent-laptop2.png" alt="firm's logo">
     </header>
     <main>
-        <h2><span>Muruganandam's Software Services</span></h2>
+        <h2>Muruganandam's Software Services</h2>
         <p><span>Muruganandam Software is a creative web design and development firm that helps people bring their ideas online. </span></p>
         <br>
         <ul>
