updates to home, course, and mascot pages

--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -41,15 +41,15 @@
         |
         <a href="https://muhilmu-ctrl.github.io/itis3135/">itis3135.io</a>
         |
-        <a href="https://www.freecodecamp.org/muhilmu">FreeCodeCamp</a>
+        <a href="https://www.freecodecamp.org/muhilmu">freeCodeCamp</a>
         |
-        <a href="https://www.codecademy.com/profiles/muhilmu">Codeacademy</a>
+        <a href="https://www.codecademy.com/profiles/muhilmu">Codecademy</a>
         |
         <a href="https://www.linkedin.com/in/muhilan-muruganandam-77b049380/">LinkedIn</a>
       </nav>
-      <p>Page Built by <a href="magnificentmeercat.com">Magnificent Meercat Industries</a> &copy; 2025</p>
+      <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/">Muruganandam Software</a> &copy; 2025</p>
     </footer>
-    <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
+    <!-- <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
       <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
     </a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
@@ -57,7 +57,7 @@
     </a>
     <script>document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
         document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-    </script>
+    </script> -->
 
     
     <!-- <a href="itis3135/">Click here to go to ITIS 3135</a> -->
