updated home index

--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
     <!-- <a href="itis3135/">Click to go to ITIS3135 Site</a> -->
     <h1>Muhilan Muruganandam</h1>
     <br>
+    <p>I am a junior at UNCC who is a Computer Science major with a concentration in Software Engineering. I love to watch horror movies, travel, take photos, and read.
+</p>
+    <br>
     <footer>
         <nav>
-          <a href="https://muhilmu-ctrl.github.io/itis3135/">ITIS3135</a>
+          <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/">ITIS3135</a>
           |
-          <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">GitHub.com</a>
+          <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">GitHub</a>
           |
           <!-- <a href="https://webpages.charlotte.edu/mmuruga2/">CLT Web</a>
           | -->
