--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -28,36 +28,14 @@
   </head>
   <body>
     <header>
-      <h1>Muhilan Muruganandam's Magnificent Meercat | ITIS3135</h1>
-      <nav>
-        <a href="./">Home</a>
-        |
-        <a href="introduction.html">Introduction</a>
-        |
-        <a href="contract.html">Contract</a>
-      </nav>
+      <div data-include="components/header.html"></div>
     </header>
     <main>
       <h2>Home</h2>
       <p>This is all the content for my ITIS 3135 class</p>
     </main>
     <footer>
-      <nav>
-        <a href="https://webpages.charlotte.edu/mmuruga2/">Charlotte.edu</a>
-        |
-        <a href="https://github.com/muhilmu-ctrl/muhilmu-ctrl.github.io">Github.com</a>
-        |
-        <a href="https://muhilmu-ctrl.github.io/">Github.io</a>
-        <!-- |
-        <a href="https://muhilmu-ctrl.github.io/itis3135/">ITIS3135</a> -->
-        |
-        <a href="https://www.freecodecamp.org/muhilmu">freeCodeCamp</a>
-        |
-        <a href="https://www.codecademy.com/profiles/muhilmu">Codecademy</a>
-        |
-        <a href="https://www.linkedin.com/in/muhilan-muruganandam-77b049380/">LinkedIn</a>
-      </nav>
-      <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/">Muruganandam Software</a> &copy; 2025</p>
+      <div data-include="components/footer.html"></div>
     </footer>
     <!-- <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
       <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
@@ -68,7 +46,7 @@
     <script>document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
         document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
     </script> -->
-
+    <script src="scripts/HTMLInclude.min.js"></script>
     
     <!-- <a href="itis3135/">Click here to go to ITIS 3135</a> -->
   </body>
