--- a/itis3135/stuff/CRAPPY page!.htm
+++ b/itis3135/stuff/CRAPPY page!.htm
@@ -50,7 +50,7 @@
   <body>
     <h2>CRAPPY SITE</h2>
     <h1>Muhilan Muruganandam</h1>
-    <img src="https://webpages.charlotte.edu/mmuruga2/itis3135/stuff/imageofboatforsomereasonthatigotoffofgoogle" alt=" i have the image of a boat for some reason " width=400px height="400px" style="margin:30px;border:3px solid black;">
+    <img src="https://webpages.charlotte.edu/mmuruga2/itis3135/stuff/imageofboatforsomereasonthatigotoffofgoogle" alt=" i have the image of a boat for some reason " width="400px" height="400px" style="margin:30px;border:3px solid black;">
     <br>
     <br>
     <div><ul style="display: inline-block;text-decoration: underline;margin:20px">
