update header for mobile view

--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -32,7 +32,7 @@
 
     </header>
     <main>
-      <h2>Contract</h2>
+      <h2 class="mobile-heading">Contract</h2>
       <p>I, Muhilan Muruganandam, agree to abide by the terms of the course contract in my FALL 2025, ITIS3135, Front-End Web App Development with my instructor, Professor D.I. von Briesen.
 
         I understand that all work that I do on publicly available online tools will bw available to the world, and will not put information there that is inappropriate for schoolwork, or tat I wish to keep private.
