--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -31,7 +31,7 @@
       <div data-include="components/header.html"></div>
     </header>
     <main>
-      <h2>Home</h2>
+      <h2 class="mobile-heading">Home</h2>
       <p>This is all the content for my ITIS 3135 class</p>
     </main>
     <footer>
