--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -31,8 +31,8 @@
       <div data-include="components/header.html"></div>
     </header>
     <main>
-      <h2>Introduction</h2>
-      <h2>Muhilan Muruganandam|Magnificent Meercat</h2>
+      <h2 class="mobile-heading">Introduction</h2>
+      <h2 class="mobile-heading">Muhilan Muruganandam|Magnificent Meercat</h2>
       <figure>
         <img src="images/muhilan_photo.jpeg" alt="Muhilan_Muruganandam"/>
         <figcaption><i>Muhilan Muruganandam</i></figcaption>
