--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -164,7 +164,7 @@
         </tbody>
       </table>
       <br>
-      <p>I, Muhilan Muruganandam, intend to finish the freeCodeCamp Full Stack Developer JavaScript section over the next 6 weeks (x should be < 7, 7 if you were to include the week break) according to the following general schedule:</p>
+      <p>I, Muhilan Muruganandam, intend to finish the freeCodeCamp Full Stack Developer JavaScript section over the next 6 weeks according to the following general schedule:</p>
       <ul>
         <li>Code Editor - dates</li>
         <li>Variables and Strings - dates</li>
