--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -23,16 +23,21 @@
         }
         p{
             font-family:Georgia;
-        }
-        main{
-          text-align: center;
+            margin-left:40px;
         }
         ul{
           text-align: left;
           display:inline-block;
         }
+        table{
+          margin: 0 auto;
+        }
         td{
           text-align: left;
+        }
+        td,th{
+          border:1px solid black;
+          padding:5px;
         }
     </style>
   </head>
@@ -166,28 +171,28 @@
       <br>
       <p>I, Muhilan Muruganandam, intend to finish the freeCodeCamp Full Stack Developer JavaScript section over the next 6 weeks according to the following general schedule:</p>
       <ul>
-        <li>Code Editor - dates</li>
-        <li>Variables and Strings - dates</li>
-        <li>Booleans and Numbers - dates</li>
-        <li>Functions- dates</li>
-        <li>Arrays - dates</li>
-        <li>Objects - dates</li>
-        <li>Loops - dates</li>
-        <li>JavaScript Fundamentals Review - dates</li>
-        <li>High Order Funcions and Callbacks - dates</li>
-        <li>DOM Manipulation and Events - dates</li>
-        <li>JavaScript and Accessibility - dates</li>
-        <li>Debugging - dates</li>
-        <li>Basic Regex - dates</li>
-        <li>Form Validation - dates</li>
-        <li>Dates - dates</li>
-        <li>Audio and Video Events - dates</li>
-        <li>Maps and Sets - dates</li>
-        <li>localStorage and CRUD Operations - dates</li>
-        <li>Classes - dates</li>
-        <li>Recursion - dates</li>
-        <li>Functional Programming - dates</li>
-        <li>Asynchronous JavaScript - dates</li>
+        <li>Code Editor - October 4th</li>
+        <li>Variables and Strings - October 4th to October 5th</li>
+        <li>Booleans and Numbers - October 5th</li>
+        <li>Functions- October 6th</li>
+        <li>Arrays - October 6th</li>
+        <li>Objects - October 7th</li>
+        <li>Loops - October 7th</li>
+        <li>JavaScript Fundamentals Review - October 8th</li>
+        <li>High Order Funcions and Callbacks - October 8th</li>
+        <li>DOM Manipulation and Events - October 13th to October 14th</li>
+        <li>JavaScript and Accessibility - October 15th</li>
+        <li>Debugging - October 15th</li>
+        <li>Basic Regex - October 16th</li>
+        <li>Form Validation - October 17th to October 18th</li>
+        <li>Dates - October 19th</li>
+        <li>Audio and Video Events - October 19th</li>
+        <li>Maps and Sets - October 20th</li>
+        <li>localStorage and CRUD Operations - October 21st</li>
+        <li>Classes - October 22nd</li>
+        <li>Recursion - October 23rd to October 24th</li>
+        <li>Functional Programming - October 25th</li>
+        <li>Asynchronous JavaScript - October 26th</li>
       </ul>
       <br>
       <br>
