--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -31,6 +31,7 @@
         }
         table{
           margin: 0 auto;
+          border-collapse: collapse;
         }
         td{
           text-align: left;
@@ -38,6 +39,9 @@
         td,th{
           border:1px solid black;
           padding:5px;
+        }
+        tr:nth-child(even){
+          background-color: rgb(117, 201, 137);
         }
     </style>
   </head>
@@ -59,112 +63,112 @@
           <tr>
             <td>Code Editors</td>
             <td>5</td>
-            <td></td>
+            <td>Learn to work with code editors and IDEs, covering installation, creating projects, keyboard shortcuts, and extentions. </td>
           </tr>
           <tr>
             <td>Variables and Strings</td>
             <td>62</td>
-            <td></td>
+            <td>Understand the basics of declaring variables and working with text data using strings, including template literals, concatenation, and string methods.</td>
           </tr>
           <tr>
             <td>Booleans and Numbers</td>
             <td>37</td>
-            <td></td>
+            <td>Learn about number types, booleans, arithmatic operators, conditional logic, and math methods.  </td>
           </tr>
           <tr>
             <td>Functions</td>
             <td>38</td>
-            <td></td>
+            <td>Learn what the purpose of a function is and how they work.</td>
           </tr>
           <tr>
             <td>Arrays</td>
             <td>35</td>
-            <td></td>
+            <td>Learn how to work with arrays adn how to use array methods.</td>
           </tr>
           <tr>
             <td>Objects</td>
             <td>28</td>
-            <td></td>
+            <td>Learn the fundamentals of JavaScript objects and object manipulation techniques.</td>
           </tr>
           <tr>
             <td>Loops</td>
             <td>22</td>
-            <td></td>
+            <td>Learn about the different types of loops and how they work.</td>
           </tr>
           <tr>
             <td>JavaScript Fundamentals Review</td>
             <td>30</td>
-            <td></td>
+            <td>Review strings, naming practices, memory management, and more fundamentals.</td>
           </tr>
           <tr>
             <td>High Order Functions and Callbacks</td>
             <td>37</td>
-            <td></td>
+            <td>Learn to work with high order functions and callbacks.</td>
           </tr>
           <tr>
             <td>DOM Manipulation and Events</td>
             <td>87</td>
-            <td></td>
+            <td>Learn how to work with Document Object Model.</td>
           </tr>
           <tr>
             <td>JavaScript and Accessibility</td>
             <td>42</td>
-            <td></td>
+            <td>Learn more about AIRA attributes and states.</td>
           </tr>
           <tr>
             <td>Debugging</td>
             <td>8</td>
-            <td></td>
+            <td>Learn about common errors and how to fix them.</td>
           </tr>
           <tr>
             <td>Basic Regex</td>
             <td>47</td>
-            <td></td>
+            <td>Learn about regular expressions and methods to work with them. </td>
           </tr>
           <tr>
             <td>Form Validation</td>
             <td>103</td>
-            <td></td>
+            <td>Understand the various ways of form validation and how its methods work.</td>
           </tr>
           <tr>
             <td>Dates</td>
             <td>5</td>
-            <td></td>
+            <td>Learn about the date object.</td>
           </tr>
           <tr>
             <td>Audio and Video Events</td>
             <td>55</td>
-            <td></td>
+            <td>Learn how to work with both audio and video files.</td>
           </tr>
           <tr>
             <td>Maps and Sets</td>
             <td>37</td>
-            <td></td>
+            <td>Learn about maps and sets, and how they differ from WeakMaps and WeakSets.</td>
           </tr>
           <tr>
             <td>localStorage and CRUD Operations</td>
             <td>78</td>
-            <td></td>
+            <td>Learn about CRUD operations and client-side storage, and their methods and properties.</td>
           </tr>
           <tr>
             <td>Classes</td>
             <td>68</td>
-            <td></td>
+            <td>Understand how classes and inheritance work in JavaScript.</td>
           </tr>
           <tr>
             <td>Recursion</td>
             <td>112</td>
-            <td></td>
+            <td>Learn what recursion is and how it works.</td>
           </tr>
           <tr>
             <td>Functional Programming</td>
             <td>23</td>
-            <td></td>
+            <td>Learn about functional programming and a technique called currying.</td>
           </tr>
           <tr>
             <td>Asynchronous JavaScript</td>
             <td>36</td>
-            <td></td>
+            <td>Learn about what asynchronous programming is and the differences between asynchronous and synchronous programming.</td>
           </tr>
         </tbody>
       </table>
