--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -182,21 +182,22 @@
         <li>Arrays - October 6th</li>
         <li>Objects - October 7th</li>
         <li>Loops - October 7th</li>
-        <li>JavaScript Fundamentals Review - October 8th</li>
-        <li>High Order Funcions and Callbacks - October 8th</li>
-        <li>DOM Manipulation and Events - October 13th to October 14th</li>
-        <li>JavaScript and Accessibility - October 15th</li>
-        <li>Debugging - October 15th</li>
-        <li>Basic Regex - October 16th</li>
-        <li>Form Validation - October 17th to October 18th</li>
-        <li>Dates - October 19th</li>
-        <li>Audio and Video Events - October 19th</li>
-        <li>Maps and Sets - October 20th</li>
-        <li>localStorage and CRUD Operations - October 21st</li>
-        <li>Classes - October 22nd</li>
-        <li>Recursion - October 23rd to October 24th</li>
-        <li>Functional Programming - October 25th</li>
-        <li>Asynchronous JavaScript - October 26th</li>
+        <li>JavaScript Fundamentals Review - October 13th</li>
+        <li>High Order Funcions and Callbacks - October 14th</li>
+        <li>DOM Manipulation and Events - October 15th to October 16th</li>
+        <li>JavaScript and Accessibility - October 17th</li>
+        <li>Debugging - October 18th</li>
+        <li>Basic Regex - October 19th</li>
+        <li>Form Validation - October 20th to October 22nd</li>
+        <li>Dates - October 22nd</li>
+        <li>Audio and Video Events - October 23rd</li>
+        <li>Maps and Sets - October 24th</li>
+        <li>localStorage and CRUD Operations - October 24th to October 25th</li>
+        <li>Classes - October 26th</li>
+        <li>Recursion - October 27th to October 28th</li>
+        <li>Functional Programming - October 29th</li>
+        <li>Asynchronous JavaScript - October 30th</li>
+        <li>JavaScript Review - October 30th</li>
       </ul>
       <br>
       <br>
