--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -122,6 +122,10 @@
             </tr>
           </tbody>
         </table>
+        <figure>
+          <img src="images/ai_generated_bookstore.png" alt="ai generated image of a bookstore." width="400" height="400">
+          <figcaption>AI generated image of the front of a bookstore.</figcaption>
+        </figure>
       </section>
       <section id="how" class="data-section" role="tabpanel">
         <h2>How</h2>
